fix issue with big titles on mobile devices

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -38,6 +38,9 @@ header .title {
   height: 100%;
   display: flex;
   flex-direction: column;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 70vw;
 }
 
 header .title h3 {
